# function-action-oidc

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile-azure-pipelines  Dockerfile-github-actions  LICENSE  README.md  action.yaml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: pr.yaml  release.yaml
src/: access.py  checks.py  cleanup.py  config.py  configs.py  defaults.py  exceptions.py  function.py  function_file.py  github_log_handler.py  index.py  orchestrator.py  schedule.py  setup_logging.py  utils.py
tests/unit/: conftest.py  test_configs.py  test_utils.py
